--- a/tw.css
+++ b/tw.css
@@ -1,6 +1,6 @@
 ﻿body {
     font-family:Verdana;
-    font-size:x-large;
+    font-size:72px;
     vertical-align:middle;
     text-align:center;
 }
