--- a/tw.css
+++ b/tw.css
@@ -4,7 +4,7 @@
     text-align:center;
     vertical-align:middle;
     background-color:silver;
-    color:darkgray;
+    color:GrayText;
     margin:0px;
 }
 
